site_assets/css/style.css
/* ==|== primary styles =====================================================
	 Author: Tim Murtaugh, monkeydo.biz
	 ========================================================================== */

html,
body {
	font: normal 18px/30px "Georgia Pro", georgia, serif;
	text-rendering: optimizeLegibility;
	color: #222;
	background-color: #fff;
	height: 100%;
}

a {
	color: #2455c3;
	text-decoration: none;
}

a:hover,
a:focus {
	text-decoration: underline;
}

p {
	/* -webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto; */
	-moz-font-feature-settings: "liga=1, dlig=1, onum=1";
	-moz-font-feature-settings: "liga", "dlig", "onum";
    -ms-font-feature-settings: "liga", "dlig", "onum";
    -webkit-font-feature-settings: "liga", "dlig", "onum";
    -o-font-feature-settings: "liga", "dlig", "onum";
    font-feature-settings: "liga", "dlig", "onum";
}

html[data-useragent*='Chrome'][data-platform*='Mac'] p {
	-webkit-font-feature-settings: normal;
    font-feature-settings: normal;
}

:target:not(#comments):not(.global-nav) {
    -webkit-animation: target-fade 2s 1;
    -moz-animation: target-fade 2s 1;
}

@-webkit-keyframes target-fade {
    0% { background-color: rgba(255,248,135,1); outline: 6px solid rgba(255,248,135,1);}
    100% { background-color: rgba(255,248,135,0); outline: 6px solid rgba(255,248,135,0); }
}
@-moz-keyframes target-fade {
    0% { background-color: rgba(255,248,135,.1); outline: 6px solid rgba(255,248,135,1); }
    100% { background-color: rgba(255,248,135,0); outline: 6px solid rgba(255,248,135,1); }
}

.main-content > p.buttonish-holder {
	margin-top: 36px;
	margin-bottom: 36px;
	font-size: 14px;
	text-align: center;
}

.buttonish,
.buttonishish {
	display: inline-block;
	padding: 2px 9px;
	font-family: "Franklin ITC Pro Light", sans-serif;
	color: #fff;
	text-decoration: none;
	background: #999;
	border-radius: 24px;
	font-style: normal;
}

html:not(.no-js) .buttonish {
	position: relative;
	padding: 2px 24px 2px 36px;
	color: #999;
}

html:not(.no-js) .buttonish:after {
	content: "Loading Comments";
	position: absolute;
	top: 2px;
	left: 0;
	height: 100%;
	width: 100%;
	text-align: center;
	text-indent: 18px;
	color: #fff;
}

html:not(.no-js) .buttonish:before {
	content: url(../img/spinner_buttonish.gif);
	display: inline-block;
	position: relative;
	top: 3px;
	left: -24px;
}

.head-east-young-man {
	float: right;
}

.head-west-young-man {
	float: left;
}


.killer-logo,
.deadly-subtitle {
	position: absolute;
	z-index: 100;
	top: 0;
	width: 100%;
	text-align: center;
}

.killer-logo {
	overflow: hidden;
}

.killer-logo > a {
	display: inline-block;
	width: 960px;
	height: 120px;
	background-image: url(../img/logo_a-list-apart.svg);
	background-size: contain;
	background-repeat: no-repeat;
	margin-top: -18px;
	-webkit-print-color-adjust: exact;

	-webkit-transition: -webkit-transform 4000ms ease-out;
	-moz-transition: -moz-transform 4000ms ease-out;
	-o-transition: -o-transform 4000ms ease-out;
	-ms-transition: -ms-transform 4000ms ease-out;
	transition: transform 4000ms ease-out;
}

.no-svg .killer-logo > a {
	background-image: url(../img/logo_a-list-apart.png);
}

.killer-logo img {
	display: none;
	width: 960px;
	max-width: 960px;
}

.no-touch .logo-holder .killer-logo a.yeeeeeeaahhh {
	-webkit-transform: translate(0,10px) rotate(.4deg);
	-moz-transform: translate(0,10px) rotate(.4deg);
	-o-transform: translate(0,10px) rotate(.4deg);
	-ms-transform: translate(0,10px) rotate(.4deg);
	transform: translate(0,10px) rotate(.4deg);
}

.go-to-nav {display: none;}

.deadly-subtitle {
	display: block;
	width: 100%;
	height: 50px;
	top: auto;
	bottom: 0;
	background: url(../img/bg_for-people-who.svg) no-repeat top center;
	text-indent: 100%;
	color: transparent;
	overflow: hidden;
	white-space: nowrap;
	-webkit-print-color-adjust: exact;
}

.no-svg .deadly-subtitle {
	background-image:  url(../img/bg_for-people-who.png);
}

.deadly-subtitle img {
	display: none;
}

ul.inline-items li {
	display: inline-block;
}

.user-tools {
	position: fixed;
	z-index: 10000;
	bottom: 0;
	right: 0;
	padding: 3px 12px;
	background: #fff;
	font-size: 12px;
	line-height: 18px;
	border-top: 1px solid #ccc;
	border-left: 1px solid #ccc;
	border-top-left-radius: 7px;
	box-shadow: 0px 0px 10px rgba(0,0,0,.2);
	font-family: "Franklin ITC Pro Light", sans-serif;
	color: #666;
}

.global-nav {
	position: absolute;
	z-index: 100;
	top: 0;
	width: 100%;
	background: #fff;
	background: rgba(255,255,255,.95);
	border-bottom: 1px solid #d8d8d8;
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-style: normal;
	font-weight: normal;
	font-size: 14px;
	line-height: 18px;
	padding: 0 24px;
}

/* .home-page .global-nav {
	position: relative;
	padding-top: 66px;
	border-bottom: 0;
} */

/*
.home-page .logo-holder .global-nav {
	z-index: 1000;
	top: -44px;
	padding-top: 0;
	border-bottom: 1px solid #d8d8d8;

	-webkit-transition: all 200ms ease-out;
	-moz-transition: all 200ms ease-out;
	-o-transition: all 200ms ease-out;
	-ms-transition: all 200ms ease-out;
	transition: all 200ms ease-out;
}

.home-page .logo-holder:hover .global-nav {
	-webkit-transform: translate(0,44px);
	-moz-transform: translate(0,44px);
	-o-transform: translate(0,44px);
	-ms-transform: translate(0,44px);
	transform: translate(0,44px);
}
*/

.global-nav ul {
	/* width: 960px;
	max-width: 100%; */
	margin: 0 auto;
	line-height: 41px;
}

.global-nav li {
	margin-right: 20px;
}

.global-nav .back-to-top {
	display: none;
}

.global-nav a {
	color: #222;
	text-transform: uppercase;
	white-space: nowrap;
}

.global-nav li:first-child a {
	display: inline-block;
	width: 24px;
	line-height: 40px;
	overflow: hidden;
	vertical-align: top;
	text-indent: 100%;
	background: url(../img/icon_navigation-laurel.svg) no-repeat center;
}

.no-svg .global-nav li:first-child a {
	background-image: url(../img/icon_navigation-laurel.png);
}

.global-nav li.head-east-young-man {
	margin-right: 0;
	padding-top: 8px;
}
/* ... */

